syntax = "proto3";

package pb;

option go_package = "github.com/Ali-Gorgani/library-management-api/auth-service/api/pb";

import "google/protobuf/timestamp.proto";

message UserRes {
  int32 id = 1;
  string username = 2;
  string email = 3;
  bool is_admin = 4;
  google.protobuf.Timestamp created_at = 5;
}

message AuthLoginReq {
  string username = 1;
  string password = 2;
}

message AuthLoginRes {
  string session_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp access_token_expires_at = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
  UserRes user = 6;
}

message AuthLogoutReq {
  string session_id = 1;
}

message AuthLogoutRes {}

message AuthRefreshTokenReq {
  string refresh_token = 1;
  int32 user_id = 2;
}

message AuthRefreshTokenRes {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expires_at = 2;
}

message AuthRevokeTokenReq {
  string session_id = 1;
}

message AuthRevokeTokenRes {}

service AuthService {
  rpc Login(AuthLoginReq) returns (AuthLoginRes) {}
  rpc Logout(AuthLogoutReq) returns (AuthLogoutRes) {}
  rpc RefreshToken(AuthRefreshTokenReq) returns (AuthRefreshTokenRes) {}
  rpc RevokeToken(AuthRevokeTokenReq) returns (AuthRevokeTokenRes) {}
}