syntax = "proto3";

package auth;

option go_package = "github.com/Ali-Gorgani/library-management-api/pkg/proto/auth";

message HashedPasswordReq {
  string password = 1;
}

message HashedPasswordRes {
  string hashed_password = 1;
}

message VerifyTokenReq {
  string token = 1;
}

message VerifyTokenRes {
  int32 id = 1;
  string username = 2;
  string email = 3;
  bool is_admin = 4;
  int64 duration = 5;
}

service AuthService {
  rpc HashedPassword(HashedPasswordReq) returns (HashedPasswordRes) {}
  rpc VerifyToken(VerifyTokenReq) returns (VerifyTokenRes) {}
}